# openWbn

./: Nicht-matchbare_wahlbezirke.csv  angebotsmieten_2007_bis_2024.csv  avg_age.csv  avg_age.py  bb.duckdb  bb.py  bb_regwbz.csv  consolidate.py  correlation.py  mieten.py  ortsbezirke_wiesbaden.csv  pyproject.toml  school_data.csv  school_data.py  wahlergebnis_2025_ortsbezirke_clean.csv  wbn.duckdb
__marimo__/session/: correlation.py.json
geodata/: script.py  visualize.py
geodata/data/: bb_regobz_jan26.csv  oeffentlich_geforderter_wohnungsbau_mietpreise_ortsbezirke_2014_bis_2023.csv  ortsbezirke.geojson  ortsbezirke.gml  ortsbezirke_osm.json  wiesbaden.duckdb
