[project]
name = "openwbn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "duckdb>=1.4.4",
    "ipython>=9.10.0",
    "jupyterlab>=4.5.3",
    "marimo>=0.19.7",
    "matplotlib>=3.10.8",
    "pip>=26.0.1",
    "polars>=1.38.0",
    "requests>=2.32.5",
    "ruff>=0.15.0",
    "seaborn>=0.13.2",
    "ty>=0.0.15",
]
